--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -141,7 +141,7 @@
 
                         </div>
                     </div>
-                    <div class="col-md-2.5 text-center deckContainer" class="task">
+                    <div class="text-center deckContainer" class="task">
                         <h4 class="sectionTitle deckTitle">Deck</h4>
                           <!-- {{#each card_data}}
                               {{#if this.decked}}
