updating styles, html classes

--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -49,7 +49,7 @@
                             <div class="col-md-9 text-center availableCards">
                                 <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="{{this.card_img}}"> {{!Will update names, etc. Placeholders for now.}}
+						            <img class="cardImg" src="{{this.imageURLNormal}}"> {{!Will update names, etc. Placeholders for now.}}
 					            </div>
                                 </div>
                             </div>
@@ -150,8 +150,6 @@
                                     <p class="deckList">{{this.card_name}}>
                                     <img class="hoverimage" src="{{this.card_img}}">    
                                 </div>
-                                
-
                             {{/if}}
                           {{/each}} -->
 
