--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -33,7 +33,7 @@
               </div>
             
               <div class = "row">
-                    <div class="col-md-11 text-center search_cards">
+                    <div class="col-lg-11 text-center search_cards">
                         <form action="" method="GET">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
                             <button type="submit" class="btn btn-default searchButton">Search</button>
@@ -43,17 +43,17 @@
               </div>
             
               <div class="row middleRow">
-                    <div class="col-md-9 text-center availableCardsContainer" class="task">
+                    <div class="col-lg-9 text-center availableCardsContainer" class="task">
                         <div class="row">
                           <!-- {{#each card_data}}
                             <div class="col-md-9 text-center availableCards">
                                 <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="{{this.imageURLNormal}}"> {{!Will update names, etc. Placeholders for now.}}
+						            <img class="lazy cardImg" data-original="{{this.imageURLNormal}}" width="180px" height="251px"> {{!Will update names, etc. Placeholders for now.}}
 					            </div>
                                 </div>
                             </div>
-                          {{/each}} -->
+                          {{/each}}} -->
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
@@ -145,7 +145,7 @@
                         <h4 class="sectionTitle deckTitle">Deck</h4>
                           <!-- {{#each card_data}}
                               {{#if this.decked}}
-                                <div class="col-md-9 text-center deckedCards"> 
+                                <div class="col-lg-12 text-center deckedCards"> 
                                     <img class="deckThumb" src="{{this.card_thumb}}">
                                     <p class="deckList">{{this.card_name}}>
                                     <img class="hoverimage" src="{{this.card_img}}">    
@@ -153,7 +153,7 @@
                             {{/if}}
                           {{/each}} -->
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
