--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -7,6 +7,7 @@
     	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="jquery.lazyload.js" type="text/javascript"></script>
         <link rel="stylesheet" href="styles.css"/>
     	<link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Francois+One|Raleway|Molengo|Manjari|Monoton|Righteous|Rubik+Mono+One|Staatliches&display=swap" rel="stylesheet">
     	<link rel="icon" href="">
@@ -57,84 +58,147 @@
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                                 <div class="floater">
                                   <div class="card addDeck" data-id="{{this.id}}">
-                                      <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+                                      <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
                                   </div>
                                   </div>
                             </div>
                             <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="cardImg" src="card.jpg"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					            </div>
+                                </div>
+                          </div>
+                           <div class="col-md-0 text-center availableCards">
+                              <div class="floater">
+                                <div class="card addDeck" data-id="{{this.id}}">
+						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
                           </div>
