--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -38,6 +38,7 @@
                         <form action="" method="GET">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
                             <button type="submit" class="btn btn-default searchButton">Search</button>
+                            
                         </form>
                     </div>
 
@@ -223,127 +224,127 @@
                             <img class="hoverimage" src="card.jpg">
                           </div>
                           
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
 
-                          <div class="col-md-9 text-center deckedCards">
+                          <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
                             <p class="deckList">The Card name that goes here</p>
                             <img class="hoverimage" src="card.jpg">
