--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -37,8 +37,14 @@
                     <div class="col-lg-11 text-center search_cards">
                         <form action="" method="GET">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
-                            <button type="submit" class="btn btn-default searchButton">Search</button>
-                            
+                            <button type="submit" class="btn btn-default searchButton">Clear</button>
+                            <img class="filterButtons" id="white" src="W.PNG">
+                            <img class="filterButtons" id="blue" src="U.PNG">
+                            <img class="filterButtons" id="black" src="B.PNG">
+                            <img class="filterButtons" id="red" src="R.PNG">
+                            <img class="filterButtons" id="green" src="G.PNG">
+                            <img class="filterButtons" id="multicolor" src="M.svg">
+                            <img class="filterButtons" id="colorless" src="C.svg">
                         </form>
                     </div>
 
@@ -46,7 +52,7 @@
             
               <div class="row middleRow">
                     <div class="col-lg-9 text-center availableCardsContainer" class="task">
-                        <div class="row">
+                        <div class="row cardsHolder">
                           <!-- {{#each card_data}}
                             <div class="col-md-9 text-center availableCards">
                                 <div class="floater">
