--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="jquery.lazyload.js" type="text/javascript"></script>
+        <script src="https://unpkg.com/isotope-layout@2/dist/isotope.pkgd.js"></script>
         <link rel="stylesheet" href="styles.css"/>
     	<link href="https://fonts.googleapis.com/css?family=Baloo|Indie+Flower|Francois+One|Raleway|Molengo|Manjari|Monoton|Righteous|Rubik+Mono+One|Staatliches&display=swap" rel="stylesheet">
     	<link rel="icon" href="">
@@ -37,14 +38,15 @@
                     <div class="col-lg-11 text-center search_cards">
                         <form action="" method="GET">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
-                            <button type="submit" class="btn btn-default searchButton">Clear</button>
-                            <img class="filterButtons" id="white" src="W.PNG">
-                            <img class="filterButtons" id="blue" src="U.PNG">
-                            <img class="filterButtons" id="black" src="B.PNG">
-                            <img class="filterButtons" id="red" src="R.PNG">
-                            <img class="filterButtons" id="green" src="G.PNG">
-                            <img class="filterButtons" id="multicolor" src="M.svg">
-                            <img class="filterButtons" id="colorless" src="C.svg">
+                            <button type="submit" title="Reset Search" class="btn btn-default searchButton">Clear</button>
+                            <img class="filterButtons" title="White" id="white" src="W.PNG">
+                            <img class="filterButtons" title="Blue" id="blue" src="U.PNG">
+                            <img class="filterButtons" title="Black" id="black" src="B.PNG">
+                            <img class="filterButtons" title="Red" id="red" src="R.PNG">
+                            <img class="filterButtons" title="Green" id="green" src="G.PNG">
+                            <img class="filterButtons" title="Multicolor" id="multicolor" src="M.svg">
+                            <img class="filterButtons" title="Colorless" id="colorless" src="C.svg">
+                            <img class="filterButtons" title="All Cards" id="all" src="mtg.png">
                         </form>
                     </div>
 
@@ -83,12 +85,17 @@
 					            </div>
                                 </div>
                           </div>
-                          <div class="col-md-0 text-center availableCards">
+                          <div class="availableCards enchantment green">
                               <div class="floater">
-                                <div class="card addDeck" data-id="{{this.id}}">
+                                <div class="card addDeck" data-id="{{this.id}}" id="green">
 						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
 					            </div>
                                 </div>
+                          </div>
+                          <div class="availableCards goblin red">
+                                <div class="card addDeck" data-id="{{this.id}}" id="red">
+						                    <img class="lazy" data-original="red-goblin.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+					                        </div>    
                           </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
@@ -111,13 +118,11 @@
 					            </div>
                                 </div>
                           </div>
-                          <div class="col-md-0 text-center availableCards">
-                              <div class="floater">
-                                <div class="card addDeck" data-id="{{this.id}}">
-						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
-					            </div>
-                                </div>
-                          </div>
+                          <div class="availableCards goblin red">
+                            <div class="card addDeck" data-id="{{this.id}}" id="red">
+                            <img class="lazy" data-original="red-goblin.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+                              </div>    
+                      </div>
                           <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
@@ -160,6 +165,11 @@
 					            </div>
                                 </div>
                           </div>
+                          <div class="availableCards goblin red">
+                            <div class="card addDeck" data-id="{{this.id}}" id="red">
+                            <img class="lazy" data-original="red-goblin.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+                              </div>    
+                      </div>
                            <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
@@ -188,6 +198,11 @@
 					            </div>
                                 </div>
                           </div>
+                          <div class="availableCards goblin red">
+                            <div class="card addDeck" data-id="{{this.id}}" id="red">
+                            <img class="lazy" data-original="red-goblin.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+                              </div>    
+                      </div>
                            <div class="col-md-0 text-center availableCards">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
@@ -209,6 +224,11 @@
 					            </div>
                                 </div>
                           </div>
+                          <div class="availableCards goblin red">
+                            <div class="card addDeck" data-id="{{this.id}}" id="red">
+                            <img class="lazy" data-original="red-goblin.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
+                              </div>    
+                      </div>
 
                         </div>
                     </div>
@@ -218,7 +238,7 @@
                               {{#if this.decked}}
                                 <div class="col-lg-12 text-center deckedCards"> 
                                     <img class="deckThumb" src="{{this.card_thumb}}">
-                                    <p class="deckList">{{this.card_name}}>
+                                    <p class="deckList" onmouseover="hovered()" onmouseout="unhovered()">{{this.card_name}}>
                                     <img class="hoverimage" src="{{this.card_img}}">    
                                 </div>
                             {{/if}}
@@ -226,14 +246,14 @@
 
                           <div class="col-lg-12 deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
-                            <p class="deckList">The Card name that goes here</p>
+                            <p class="deckList" onmouseover="hovered()" onmouseout="unhovered()">Burgeoning</p>
                             <img class="hoverimage" src="card.jpg">
                           </div>
                           
                           <div class="col-lg-12 text-center deckedCards">
                             <img class="deckThumb" src="art_crop.jpg">
-                            <p class="deckList">The Card name that goes here</p>
-                            <img class="hoverimage" src="card.jpg">
+                            <p class="deckList" onmouseover="hovered()" onmouseout="unhovered()">Mogg Fanatic</p>
+                            <img class="hoverimage" src="red-goblin.jpg">
                           </div>
 
                           <div class="col-lg-12 text-center deckedCards">
