updating styles for deck section.

--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -36,9 +36,10 @@
             
               <div class = "row">
                     <div class="col-lg-11 text-center search_cards">
-                        <form action="" method="GET">
+                        <form class="searchContainer">
                             <input type="text" class="form-control cardSearch" name="card_search" placeholder="Type the name of a card..." id="search_cards">
-                            <button type="submit" title="Reset Search" class="btn btn-default searchButton">Clear</button>
+                            <!-- <button type="submit" title="Reset Search" class="btn btn-default searchButton" id="all">Clear</button> -->
+                            <div title="Reset Search" class="searchButton clearB" id="all">Clear</div>
                             <img class="filterButtons" title="White" id="white" src="W.PNG">
                             <img class="filterButtons" title="Blue" id="blue" src="U.PNG">
                             <img class="filterButtons" title="Black" id="black" src="B.PNG">
