updated deck funtionality (basic add/remove), updated styles for cards and fixed styling issues. updated filter funtionality

--- a/test/demo/P2-Index/index.html
+++ b/test/demo/P2-Index/index.html
@@ -41,7 +41,7 @@
                             <div title="Reset Search" class="searchButton clearB" id="all">Clear</div>
                             <img class="filterButtons" title="White" id="white" src="W.PNG">
                             <img class="filterButtons" title="Blue" id="blue" src="U.PNG">
-                            <img class="filterButtons" title="Black" id="black" src="B.PNG">
+                            <img class="filterButtons" title="Black" id="B" src="B.PNG">
                             <img class="filterButtons" title="Red" id="red" src="R.PNG">
                             <img class="filterButtons" title="Green" id="green" src="G.PNG">
                             <img class="filterButtons" title="Multicolor" id="multicolor" src="M.svg">
@@ -64,7 +64,7 @@
                                 </div>
                             </div>
                           {{/each}}} -->
-                          <div class="col-md-0 text-center availableCards">
+                          <div class="col-md-0 text-center availableCards coloridB">
                               <div class="floater">
                                 <div class="card addDeck" data-id="{{this.id}}">
 						            <img class="lazy" data-original="card.jpg" width="180px" height="251px"> <!-- {{!Will update names, etc. Placeholders for now.}} -->
